--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "material-icons": "^0.3.1",
     "vue": "^2.5.2",
+    "vue-async-computed": "^3.7.0",
     "vue-router": "^3.0.1",
     "vuelidate": "^0.7.4",
     "vuesax": "^3.9.0"
